# pararun

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
examples/: bench.txt  example1_async.py  example2_mp.py
pararun/: __init__.py  async_run.py  executor_run.py  store.py
tests/: test_async.py  test_executor.py
