[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pararun"
version = "0.1.0"
description = "A generic library for concurrent/parallel task execution with idempotent caching."
readme = "README.md"
authors = [
  { name = "Yam", email = "haoshaochun@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.0.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/hscspring/pararun"
"Bug Tracker" = "https://github.com/hscspring/pararun/issues"
